--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@vicons/ionicons5": "^0.8.0",
+    "@vicons/fluent": "^0.8.0",
     "axios": "^0.21.1",
     "hanabi": "^0.4.0",
     "marked": "^2.0.1",
